Fizemos a parte do front e do back do cadastro de participante.
