# back-end/server.js
@@ -10,6 +10,7 @@ import routerUsuarios from "./routes/usuarioRoute.js";
 import routerSala from "./routes/salaRoute.js";
 import routerEquipe from "./routes/equipeRoute.js";
 import routerJogo from "./routes/jogoRoute.js";
+import routerParticipante from "./routes/participanteRoute.js";
 
 const app = express();
 
@@ -29,6 +30,7 @@ app.use("/usuarios", routerUsuarios);
 app.use("/salas", routerSala);
 app.use("/equipes", routerEquipe);
 app.use("/jogos", routerJogo);
+app.use("/participantes", routerParticipante);
 
 app.listen(5000, function () {
   console.log("Servidor Web em Funcionamento!");
