# back-end/swagger-output.json
@@ -402,6 +402,84 @@
           }
         }
       }
+    },
+    "/participantes/": {
+      "get": {
+        "tags": [
+          "Participante"
+        ],
+        "summary": "Endpoint para retornar todos os participantes",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Participante"
+        ],
+        "summary": "Cadastra um participante",
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/participanteModel"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/participantes/{id}": {
+      "get": {
+        "tags": [
+          "Participante"
+        ],
+        "summary": "Retorna um participante baseado em um código",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -453,15 +531,44 @@
           },
           "dtInicio": {
             "type": "string",
-            "example": "2024-11-01T09:00:00"
+            "example": "01/11/2024 17:33:47"
           },
           "dtFim": {
             "type": "string",
-            "example": "2024-11-01T17:00:00"
+            "example": "01/11/2024 17:43:47"
           },
           "salaId": {
             "type": "number",
             "example": 1
+          }
+        }
+      },
+      "participanteModel": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number",
+            "example": 0
+          },
+          "dtEntrada": {
+            "type": "string",
+            "example": "01/11/2024 17:33:47"
+          },
+          "dtSaida": {
+            "type": "string",
+            "example": "01/11/2024 17:43:47"
+          },
+          "usuarioId": {
+            "type": "number",
+            "example": 1
+          },
+          "salaId": {
+            "type": "number",
+            "example": 1
+          },
+          "equipeId": {
+            "type": "number",
+            "example": 3
           }
         }
       }
